test/fixtures/source-map/output/source_map_no_source_file.snapshot
*no-source.js:2
    throw new Error('foo');
    ^

Error: foo
    at Throw (*file-not-exists.ts:2:9)
    at Object.<anonymous> (*file-not-exists.ts:5:1)

Node.js *
